--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <header id="topo">  </header>
         <main id="container">
+            <div id="conteudo2"></div>
              <div id="conteudo">
 
                 <img id="foto" src="rafael.jpg" width="200" alt="foto de Rafael">
