--- a/curriculo/index.html
+++ b/curriculo/index.html
@@ -1,57 +1,83 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculo Rafael Costa Moura</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 </head>
+
 <body>
     <main class="container">
         <section class="profile">
             <img src="./foto.jpg" class="foto" alt="">
             <ul>
-                <li><i class="fas fa-user-alt"></i><p>Nome: <br><strong>Rafael Costa Moura</strong></p></li>
-                <li><i class="fas fa-home"></i><p>Endereço: <br>João Pessoa - PB</p></li>
-                <li><i class="fas fa-phone"></i><p>Telefone: <br>(83) 98839-6984</p></li>
-                <a href="mailto:rafaelcostamoura@gmail.com"><li><i class="fas fa-at"></i><p>Email: <br>rafaelcostamoura@gmail.com</p></li></a>
-                <a href="https://www.linkedin.com/in/rafaelcostamoura/" target="_blank"><li><i class="fab fa-linkedin"></i><p>Linkedin.com/rafaelmoura</p></li></a>
-                <a href="https://github.com/rafasysop" target="_blank"><li><i class="fab fa-github"></i><p>Github.com/rafasysop</p></li></a>
+                <li><i class="fas fa-user-alt"></i>
+                    <p>Nome: <br><strong>Rafael Costa Moura</strong></p>
+                </li>
+                <li><i class="fas fa-home"></i>
+                    <p>Endereço: <br>João Pessoa - PB</p>
+                </li>
+                <li><i class="fas fa-phone"></i>
+                    <p>Telefone: <br>(83) 98839-6984</p>
+                </li>
+                <a href="mailto:rafaelcostamoura@gmail.com">
+                    <li><i class="fas fa-at"></i>
+                        <p>Email: <br>rafaelcostamoura@gmail.com</p>
+                    </li>
+                </a>
+                <a href="https://www.linkedin.com/in/rafaelcostamoura/" target="_blank">
+                    <li><i class="fab fa-linkedin"></i>
+                        <p>Linkedin.com/rafaelmoura</p>
+                    </li>
+                </a>
+                <a href="https://github.com/rafasysop" target="_blank">
+                    <li><i class="fab fa-github"></i>
+                        <p>Github.com/rafasysop</p>
+                    </li>
+                </a>
             </ul>
         </section>
         <section class="content">
             <h1 class="name">Rafael Costa Moura</h1>
             <p class="subtitulo">Desenvolvedor FrontEnd </p>
-            
+
             <p class="desc">Sou Profissional de Ti onde trabalho desde os meus 14 anos,
-                de lá pra vá venho sempre estudando e ganhando conhecimento em novas tecnologias.
-            Estou Buscandome aperfeiçoar em desenvolvimento web.</p>
+                de lá pra cá venho sempre estudando e ganhando conhecimento em novas tecnologias.
+                Estou Buscando me aperfeiçoar em desenvolvimento web.</p>
             <hr>
             <div class="exp">
                 <i class="fas fa-briefcase icon"></i>
                 <h2>Experiencia Profissional</h2>
             </div>
             <table class="exp-table">
-                <tr >
+                <tr>
+                    <td class="td-data">Jan/2013 - Jul/2020</td>
+                    <td class="tr">
+                        <h3>CEO</h3>
+                        <p class="empresa">Conecta Telecom, Formosa/GO</p>
+                        <p>Fundei e desenvolvi a empresa como um todo, montagem de estrutura(torres e equipamentos),
+                            atendimento ao cliente, gestor financeiro. </p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="td-data">Jan/2011 - Dez/2012</td>
+                    <td class="tr">
+                        <h3>Administrador de Redes</h3>
+                        <p class="empresa">Formosa Telecom, Formosa/GO</p>
+                        <p>Trabalhei gerenciando a rede wireless e administrando servidores mikrotik e linux,
+                            Desenvolvimento e manutenção de websites.</p>
+                    </td>
+                </tr>
+                <tr>
                     <td class="td-data">Jan/2009 - Dez/2010</td>
-                    <td class="tr"><h3>Tecnico de Informática</h3>
+                    <td class="tr">
+                        <h3>Tecnico de Informática</h3>
                         <p class="empresa">Micrológica Informática, Formosa/GO</p>
                         <p>Trabalhei com manutenção de computadores e atendimento a clientes</p>
-                    </td>
-                </tr>
-                <tr >
-                    <td class="td-data">Jan/2011 - Dez/2012</td>
-                    <td class="tr"><h3>Administrador de Redes</h3>
-                        <p class="empresa">Formosa Telecom, Formosa/GO</p>
-                        <p>Trabalhei gerenciando a rede wireless e administrando servidores mikrotik e linux, Desenvolvimento e manutenção de websites.</p>
-                    </td>
-                </tr>
-                <tr >
-                    <td class="td-data">Jan/2013 - Jul/2020</td>
-                    <td class="tr"><h3>CEO</h3>
-                        <p class="empresa">Conecta Telecom, Formosa/GO</p>
-                        <p>Fundei e desenvolvi a empresa como um todo, montagem de estrutura(torres e equipamentos), atendimento ao cliente, gestor financeiro. </p>
                     </td>
                 </tr>
             </table>
@@ -62,58 +88,80 @@
             </div>
 
             <table class="exp-table">
-                <tr >
-                    <td class="td-data">Jan/2000 - Dez/2003</td>
-                    <td class="tr"><h3>Ensino Médio</h3>
-                        <p class="empresa">Colégio Metropolitano, Formosa/GO</p>
+                <tr>
+                    <td class="td-data">Set/2020 - Set/2021</td>
+                    <td class="tr">
+                        <h3>Desenvolvedor FullStack</h3>
+                        <a href="https://www.betrybe.com/" target="_blank">
+                            <p class="empresa">Trybe, EAD</p>
+                        </a>
+                        <p>A Trybe é uma escola para pessoas que querem construir uma carreira de sucesso em tecnologia
+                            e que se compromete integralmente com seus estudantes, pois as pessoas só pagam quando
+                            conseguirem um bom trabalho.
+                            O programa conta com mais de 1.500 horas de aulas presenciais e on-line e aborda introdução
+                            ao desenvolvimento de software, front-end, back-end, ciência da computação, engenharia de
+                            software, metodologias ágeis e habilidades comportamentais.
+                            O currículo da Trybe foi desenhado em parceria com as maiores empresas de tecnologia do
+                            Brasil e do mundo e ao longo da formação estudamos JavaScript, HTML, CSS, React, Node,
+                            Express.js, SQL, Git, entre outras linguagens e frameworks.</p>
                     </td>
                 </tr>
-                <tr >
-                    <td class="td-data">Jan/2006 - Jun/2006</td>
-                    <td class="tr"><h3>Web Design</h3>
-                        <p class="empresa">CEP cursos - Centro de Educação Profissional, Planaltina/DF</p>
+                <tr>
+                    <td class="td-data">Jun/2020 - nov/2020</td>
+                    <td class="tr">
+                        <h3>React - Native</h3>
+                        <p class="empresa">Dev Samurai, EAD</p>
+                        <p>Curso voltado para programador de aplicativos com foco em: React Native (cobre os novos Hooks
+                            do React), ​JavaScript, JS ES6, DOM, MAP/REDUCE, Banco de Dados (local e online),
+                            Dispositivos ​(câmera, GPS e mais) com uma Carga Horária de 60h. </p>
                     </td>
                 </tr>
-                <tr >
-                    <td class="td-data">Jan/2009 - maio/2009</td>
-                    <td class="tr"><h3>Redes Basica</h3>
-                        <p class="empresa">ETB - Escola Técnica de Brasilia, Taguatinga/DF</p>
-                    </td>
-                </tr> <tr >
-                    <td class="td-data">Jan/2009 - Jun/2009</td>
-                    <td class="tr"><h3>PHP - Hypertext Processor</h3>
-                        <p class="empresa">ETB - Escola Técnica de Brasilia, Taguatinga/DF</p>
-                    </td>
-                </tr>
-                <tr >
-                    <td class="td-data">Jun/2009 - Out/2009</td>
-                    <td class="tr"><h3>Banco de dados</h3>
-                        <p class="empresa">ESAB - Escola Superior Aberta do Brasil, EAD</p>
-                    </td>
-                </tr> <tr >
+                <tr>
                     <td class="td-data">Jan/2011 - Out/2012</td>
-                    <td class="tr"><h3>Linux One, Reloaded e Pentest Profissional</h3>
+                    <td class="tr">
+                        <h3>Linux One, Reloaded e Pentest Profissional</h3>
                         <p class="empresa">Linux Force Security, EAD</p>
                     </td>
                 </tr>
-                <tr >
-                    <td class="td-data">Jun/2020 - nov/2020</td>
-                    <td class="tr"><h3>React - Native</h3>
-                        <p class="empresa">Dev Samurai, EAD</p>
-                        <p>Curso voltado para programador de aplicativos com foco em: React Native (cobre os novos Hooks do React), ​JavaScript, JS ES6, DOM, MAP/REDUCE, Banco de Dados (local e online), Dispositivos ​(câmera, GPS e mais) com uma Carga Horária de 60h. </p>
+
+                <tr>
+                    <td class="td-data">Jun/2009 - Out/2009</td>
+                    <td class="tr">
+                        <h3>Banco de dados</h3>
+                        <p class="empresa">ESAB - Escola Superior Aberta do Brasil, EAD</p>
                     </td>
-                </tr> <tr >
-                    <td class="td-data">Set/2020 - Set/2021</td>
-                    <td class="tr"><h3>Desenvolvedor FullStack</h3>
-                        <a href="https://www.betrybe.com/" target="_blank"><p class="empresa">Trybe, EAD</p></a>
-                        <p>A Trybe é uma escola para pessoas que querem construir uma carreira de sucesso em tecnologia e que se compromete integralmente com seus estudantes, pois as pessoas só pagam quando conseguirem um bom trabalho.
-                            O programa conta com mais de 1.500 horas de aulas presenciais e on-line e aborda introdução ao desenvolvimento de software, front-end, back-end, ciência da computação, engenharia de software, metodologias ágeis e habilidades comportamentais.
-                            O currículo da Trybe foi desenhado em parceria com as maiores empresas de tecnologia do Brasil e do mundo e ao longo da formação estudamos JavaScript, HTML, CSS, React, Node, Express.js, SQL, Git, entre outras linguagens e frameworks.</p>
+                </tr>
+                <tr>
+                    <td class="td-data">Jan/2009 - Jun/2009</td>
+                    <td class="tr">
+                        <h3>PHP - Hypertext Processor</h3>
+                        <p class="empresa">ETB - Escola Técnica de Brasilia, Taguatinga/DF</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="td-data">Jan/2009 - maio/2009</td>
+                    <td class="tr">
+                        <h3>Redes Basica</h3>
+                        <p class="empresa">ETB - Escola Técnica de Brasilia, Taguatinga/DF</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="td-data">Jan/2006 - Jun/2006</td>
+                    <td class="tr">
+                        <h3>Web Design</h3>
+                        <p class="empresa">CEP cursos - Centro de Educação Profissional, Planaltina/DF</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="td-data">Jan/2000 - Dez/2003</td>
+                    <td class="tr">
+                        <h3>Ensino Médio</h3>
+                        <p class="empresa">Colégio Metropolitano, Formosa/GO</p>
                     </td>
                 </tr>
             </table>
-
         </section>
     </main>
 </body>
+
 </html>
