--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style2.css">
 </head>
 <body>
+    <div class="loading"></div>
     <header class="header-container">
         <img src="rafael.jpg" class="foto" alt="Foto Rafael">
         <section class="descricao">
