atualizando titulo dos projetos

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <a href="https://rafasysop.github.io/react-netflix/" target="_blank" rel="noopener noreferrer">
             <section class="card">
                 <h1 class="title-card">
-                    Netflix
+                    Clone do Netflix
                 </h1>
                 <img src="netflix.png" alt="netflix">
             </section>
@@ -40,7 +40,7 @@
         <a href="https://rafasysop.github.io/desafio-clubpetro/" target="_blank" rel="noopener noreferrer">
             <section class="card">
                 <h1 class="title-card">
-                    ClubPetro
+                    Desafio ClubPetro
                 </h1>
                 <img src="desafioclubpetro.png" alt="clubpetro">
             </section>
