--- a/index.html
+++ b/index.html
@@ -1,52 +1,68 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rafael C. Moura - Desenvolvedor FrontEnd</title>
-    <link rel="stylesheet" href="style2.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style2.css" />
+  </head>
+  <body>
     <div class="loading"></div>
     <header class="header-container">
-        <img src="rafael.jpg" class="foto" alt="Foto Rafael">
-        <section class="descricao">
-            <h1 class="title-name">Rafael C. Moura</h1>
-            <p class="subtitle">Desenvolvedor FrontEnd</p>
-            <section class="icons">
-                <a href="https://www.instagram.com/rafasysop/" target="_blank" rel="noopener noreferrer">
-                    <img src="insta.svg" alt="Instagram" class="insta">
-                </a>
-                <a href="https://github.com/rafasysop" target="_blank" rel="noopener noreferrer">
-                    <img src="github.svg" alt="github" class="github">
-                </a>
-                <a href="https://www.linkedin.com/in/rafaelcostamoura/" target="_blank" rel="noopener noreferrer">
-                    <img src="linkedin.svg" alt="linkedin" class="linkedin">
-                </a>
-            </section>
+      <img src="rafael.jpg" class="foto" alt="Foto Rafael" />
+      <section class="descricao">
+        <h1 class="title-name">Rafael C. Moura</h1>
+        <p class="subtitle">Desenvolvedor FrontEnd</p>
+        <section class="icons">
+          <a
+            href="https://www.instagram.com/rafasysop/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img src="insta.svg" alt="Instagram" class="insta" />
+          </a>
+          <a
+            href="https://github.com/rafasysop"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img src="github.svg" alt="github" class="github" />
+          </a>
+          <a
+            href="https://www.linkedin.com/in/rafaelcostamoura/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img src="linkedin.svg" alt="linkedin" class="linkedin" />
+          </a>
         </section>
+      </section>
     </header>
     <main class="main-container">
-        <h1 class="title-project">Projetos:</h1>
-        <a href="https://rafasysop.github.io/react-netflix/" target="_blank" rel="noopener noreferrer">
-            <section class="card">
-                <h1 class="title-card">
-                    Clone do Netflix
-                </h1>
-                <img src="netflix.png" alt="netflix">
-            </section>
-        </a>
-        <a href="https://rafasysop.github.io/desafio-clubpetro/" target="_blank" rel="noopener noreferrer">
-            <section class="card">
-                <h1 class="title-card">
-                    Desafio ClubPetro
-                </h1>
-                <img src="desafioclubpetro.png" alt="clubpetro">
-            </section>
-        </a>
+      <h1 class="title-project">Projetos:</h1>
+      <a
+        href="https://rafasysop.github.io/react-netflix/"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        <section class="card">
+          <h1 class="title-card">Clone do Netflix</h1>
+          <img src="netflix.png" alt="netflix" />
+        </section>
+      </a>
+      <a
+        href="https://rafasysop.github.io/desafio-clubpetro/"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        <section class="card">
+          <h1 class="title-card">Desafio ClubPetro</h1>
+          <img src="desafioclubpetro.png" alt="clubpetro" />
+        </section>
+      </a>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"></script>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
